--- a/kalita-website/themes/adidoks/config.toml
+++ b/kalita-website/themes/adidoks/config.toml
@@ -1,7 +1,7 @@
 # The URL the site will be built for
 base_url = "https://adidoks.netlify.com"
-title = "AdiDoks"
-description = "AdiDoks is a Zola theme helping you build modern documentation websites, which is a port of the Hugo theme Doks for Zola."
+title = "Kalita"
+description = "Kalita is Ergo platform wallet"
 
 # The default language; used in feeds and search index
 # Note: the search index doesn't support Chinese/Japanese/Korean Languages
@@ -97,7 +97,6 @@ github = "https://github.com/aaranxu"
 section = "blog" # see config.extra.main~url
 ## Sitelinks Search Box
 site_links_search_box = false
-
 
 # Menu items
 [[extra.menu.main]]
