--- a/kalita-website/themes/adidoks/config.toml.example
+++ b/kalita-website/themes/adidoks/config.toml.example
@@ -42,6 +42,7 @@ include_content = true
 # Theme can be customised by setting the `highlight_theme`
 # variable to a theme supported by Zola
 highlight_code = true
+highlight_theme = "base16-ocean-dark"
 
 [extra]
 # Put all your custom variables here
